# kicad-parts-database

./: .gitmodules  Dockerfile  README.md  alembic.ini  create_tables.py  docker-compose.yml  kicad-parts-database.kicad_httplib  main.py  pyproject.toml
alembic/: env.py
kicad_parts_database/kicad_db/: __init__.py  db_definitions.py
kicad_parts_database/schema/: database.py  database2.py
src/: db.py
src/api/v1/: main.py
src/definitions/: __init__.py  parts.py
test/: bootstrap_async.py  test_part_to_fields.py
